--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/image-super-resolution"]
 	path = external/image-super-resolution
 	url = https://github.com/idealo/image-super-resolution
+[submodule "libs/traiNNer"]
+	path = libs/traiNNer
+	url = https://github.com/victorca25/traiNNer
