Added updated NTIRE22_Inpainting submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libs/SemanticSegmentationInArtPaintings"]
 	path = libs/SemanticSegmentationInArtPaintings
 	url = https://github.com/davidghobson1/SemanticSegmentationInArtPaintings
+[submodule "libs/NTIRE22_Inpainting"]
+	path = libs/NTIRE22_Inpainting
+	url = https://github.com/D3F4LT4ST/NTIRE22_Inpainting
